tests/syntax-errors/effect_with_several_errors.arl
archetype effect_with_several_errors

entry ident () {
  effect {
    to; f(); when
  }
}
